Prepared frontend for deployment

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
-REACT_APP_BACKEND_URL=
-REACT_APP_RECAPTCHA_KEY=
+# React app build/serve arguments
+REACT_APP_BACKEND_URL=https://my-faucet.local/api
+REACT_APP_RECAPTCHA_KEY=test_test_junk
+
+# Deployment params
+STATIC_SRV_PORT=3000
+LISTEN_ADDR=127.0.0.1:80
